--- a/about.Rmd
+++ b/about.Rmd
@@ -3,6 +3,11 @@ title: "Hi there!"
 ---
 
 ```{css}
+d-title h1 {
+  text-align: center;
+  font-family: trispace;
+}
+
 p {
   font-family: 'Adelle';
 }
