--- a/_posts/2020-11-08-plot-makeover-2/plot-makeover-2.Rmd
+++ b/_posts/2020-11-08-plot-makeover-2/plot-makeover-2.Rmd
@@ -11,6 +11,7 @@ author:
   - name: June Choe
     affiliation: University of Pennsylvania Linguistics
     affiliation_url: https://live-sas-www-ling.pantheon.sas.upenn.edu/
+    orcid_id: 0000-0002-0701-921X
 date: 11-08-2020
 output:
   distill::distill_article:
@@ -31,6 +32,8 @@ knitr::opts_chunk$set(
 )
 xaringanExtra::use_clipboard()
 ```
+
+_This is the second installment of **plot makeover** where I take a plot in the wild and make very opinionated modifications to it._
 
 ## Before
 
