--- a/resources.Rmd
+++ b/resources.Rmd
@@ -17,7 +17,7 @@ p {
 
 - {ggplot2} style guide and showcase ({xaringan} + {flipbookr} presentation)
 
-    - Penn Phonetics Lab [[slides](https://yjunechoe.netlify.app/flipbooks/p_lab_ggplot2_2020/p_lab_ggplot2.html), [code](https://gist.github.com/yjunechoe/b7bc540f290044ffebec0a9031d586df)] (10/23/20)
+    - Penn Phonetics Lab [[slides](https://yjunechoe.netlify.app/flipbooks/p_lab_ggplot2_2020/p_lab_ggplot2.html), [code](https://raw.githubusercontent.com/yjunechoe/yjunechoe.github.io/master/flipbooks/P_lab_ggplot2_2020/P_lab_ggplot2.Rmd)] (10/23/20)
 
 
 ## R Programming
